finish initially